Feat: Display score on screen:
- add disabled input form to index.html
- target and update form in player update fucntion in app.js
- style in style.css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <p id="scoretext" >Score:</p>
+    <input type="number" id="score" value="" disabled="disabled" />
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
