--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <p id="scoretext" >Score:</p>
-    <input type="number" id="score" value="" disabled="disabled" />
+    <p id="scoretext" >Score:
+    <input type="number" id="score" value="" disabled="disabled" /> </p>
+    <p id="deathstext" >Deaths:
+    <input type="number" id="deaths" value="" disabled="disabled" /> </p>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
