--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <input type="number" id="score" value="" disabled="disabled" /> </p>
     <p id="deathstext" >Deaths:
     <input type="number" id="deaths" value="" disabled="disabled" /> </p>
+    <p>Make it to the water to score! <br>
+        Bugs speed up as your score increases. <br>
+         < Use arrow keys to move >
+    </p>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
